# sphinx_action_example

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build_and_upload_sphinx.yml
docs/: conf.py  index.rst
sphinx_action_example/: package_methods.py
sphinx_action_example/test/sphinx_action_example/: test_package_methods.py
test/sphinx_action_example/: test_package_methods.py
