[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sphinx_action_example"
version = "0.0.2"
authors = [
  { name="Scott Morken", email="scottm361@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/smorken/sphinx_action_example"
"Bug Tracker" = "https://github.com/smorken/sphinx_action_example/issues"

[tools.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
